@@ -1986,7 +1986,7 @@ static void DisplayTeamStats(void)
 
 		const wchar_t* min_name = NULL;
 		const wchar_t* max_name = NULL;
-		INT32 min_val           = 100 + 1;
+		INT32 min_val           = 100;
 		INT32 max_val           = 0;
 		INT32 sum_val           = 0;
 		INT32 count             = 0;
@@ -2012,12 +2012,12 @@ static void DisplayTeamStats(void)
 					case  9: val = s->bExplosive;    break;
 					case 10: val = s->bMedical;      break;
 				}
-				if (min_val > val)
+				if (min_val >= val)
 				{
 					min_name = s->name;
 					min_val  = val;
 				}
-				if (max_val < val)
+				if (max_val <= val)
 				{
 					max_name = s->name;
 					max_val = val;
@@ -2059,12 +2059,12 @@ static void DisplayTeamStats(void)
 						case  9: val = p->bExplosive;    break;
 						case 10: val = p->bMedical;      break;
 					}
-					if (min_val > val)
+					if (min_val >= val)
 					{
 						min_name = p->zNickname;
 						min_val  = val;
 					}
-					if (max_val < val)
+					if (max_val <= val)
 					{
 						max_name = p->zNickname;
 						max_val = val;
